# growatt-monitor

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  404.html  Makefile  README.md  Runtime.py  gen_ref_nav.py  index.html  main.py  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  settings.py  setup.cfg  setup.py  signals.py  sitemap.xml  tox.ini
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml  publish.yml  push.yaml  release.yml
.github/workflows/run-checks/: action.yml
.github/workflows/setup-poetry-env/: action.yml
AUTHORS/: index.html
credits/: index.html
docs/: AUTHORS.md  README.md  ShinePhone-iOS.md  gen_credits.py  growatt-swagger-api.json  growatt-web-api-swagger.json  growatt-web-api-swagger.yml  growatt-web-swagger.json  libraries.md  resources.md  swagger.json
docs/assets/: growatt-web-api-swagger.yml
docs/releases/: .pages.yml  1.0.md  index.md
growatt_monitor/: __init__.py  settings.py  settings_example.py  version.py
growatt_monitor/apps/: __init__.py  config.py  config.pyi  registry.py  registry.pyi
growatt_monitor/conf/: __init__.py  global_settings.py  license.txt
growatt_monitor/core/: GrowattAPI.py  GrowattWeb.py  SessionFactory.py  exceptions.py  schedule.py  signals.py
growatt_monitor/core/mail/: __init__.py  utils.py
growatt_monitor/core/mail/backends/: __init__.py  base.py  smtp.py
growatt_monitor/core/pvoutput/: PVOutputAPI.py
growatt_monitor/dispatch/: __init__.py  dispatcher.py
growatt_monitor/utils/: __init__.py  data_process.py  datetime.py  decorators.py  encoding.py  functional.py  hashable.py  inspect.py  itercompat.py  license.txt  log.py  module_loading.py  regex_helper.py  threads.py  utils.py  version.py
growatt_monitor/utils/logs/: log.py  loguru.py  loguru.pyi
growatt_proxy/: Proxy.py  __init__.py  apps.py  data_process.py  growatt_utils.py  settings.py  signals.py
growatt_proxy/cliparser/commands/: start_proxy_server.py  test_ports.py
growatt_web_api/: GrowattWeb.py  __init__.py  apps.py  growatt.py  readme.md  settings.py  signals.py
growatt_web_api/cliparser/commands/: startWebApi.py
growatt_web_api/jobs/: sample.py
growatt_web_api/sensor_types/: inverter.py  mix.py  sensor_entity_description.py  storage.py  tlx.py  total.py
influxdb/: apps.py  growatt.py  influxdb.py  settings.py  signals.py
libraries/: index.html
license/: index.html
modbus/: GrowattWeb.py
open_weather_map/: Weather.py  __init__.py  apps.py  settings.py  signals.py
open_weather_map/cliparser/: __init__.py
overrides/: main.html
pvoutput/: PVOutputAPI.py  apps.py  settings.py  signals.py
reference/SUMMARY/: index.html
releases/: index.html
releases/1.0/: index.html
resources/: index.html
search/: search_index.json
tests/: __init__.py  test_growatt_monitor.py
