[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Growatt Monitor"
version = "1.0.0"
description = "Growatt inverter monitor from Modbus and API server and parse data to different output sources"
authors = ["Zaharia Constantin <layout.webdesign@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/soulraven/growatt-monitor"
documentation = "https://soulraven.github.io/growatt-monitor/"
keywords = [
    'roundbox',
    'template',
    'poetry',
    'modbus',
    'influxdb',
    'mqtt',
    'proxy'
]
packages = [
  {include = "RoundBox"}
]
include = [

]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mkdocs-material = ">=8.2.9"
mkdocs-coverage = "^0.2.5"
mkdocs-literate-nav = "^0.4.1"
mkdocs-gen-files = "^0.3.4"
mkdocs = "^1.3.0"
toml = "^0.10.2"
coverage = "^6.3.2"
slugify = "^0.0.1"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
pytest-cookies = "^0.6.1"
tox = "^3.25.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"

[tool.poetry.extras]

[tool.poetry.plugins]

[tool.poetry.scripts]
roundbox-admin = "RoundBox.core.cliparser:exec_from_cli"

[tool.poetry.urls]
"Source" = "https://github.com/soulraven/growatt-monitor"
"Issues" = "https://github.com/soulraven/growatt-monitor/issues"
"Discussions" = "https://github.com/soulraven/growatt-monitor/discussions"
"Documentation" = "https://soulraven.github.io/growatt-monitor/"

[tool.black]
skip-string-normalization = true
line_length = 99
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \notebooks
    | .ipynb_checkpoints
    | __pycache__
    | data
    | logs
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
profile = "black"
