[metadata]
name = growatt_monitor
author = Constantin Zaharia
author_email = constantin.zaharia@github.com
home_page = https://github.com/soulraven/growatt-monitor
url = https://github.com/soulraven/growatt-monitor
description = Growatt implementation for monitoring and notification
long_description = file: README.md
long_description_content_type = text/markdown
keywords = growatt protocol rs485 wifi
license = GPL, Version 3.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >= 3.10
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
tests_require =
    pytest

[options.extras_require]
loguru =
    loguru
notifiers =
    notifiers
    sentry_sdk
all =
    loguru
    notifiers
    sentry_sdk

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
exclude = .git,__pycache__,doc/*,build,dist,.tox
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
