[metadata]
name = growatt_monitor
version = attr: growatt_monitor.__version__
author = Constantin Zaharia
author_email = constantin.zaharia@progeek.ro
description = Growatt implementation for monitoring and notification
home_page = https://github.com/soulraven/growatt-monitor
url = https://github.com/soulraven/growatt-monitor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = growatt protocol rs485 wifi
license = GPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
projects_urls =
    Source = https://github.com/soulraven/growatt-monitor
    Issues = https://github.com/soulraven/growatt-monitor/issues
    Discussions = https://github.com/soulraven/growatt-monitor/discussions
    Documentation = https://soulraven.github.io/growatt-monitor/
    Releases = https://soulraven.github.io/growatt-monitor/releases

[options]
include_package_data = True
python_requires = >= 3.10
packages = find:
test_suite = tests
install_requires =
    roundbox
    poetry
    aiohttp
    growattServer
    influxdb_client
    Jinja2
    pyowm
    requests
    toml
    urllib3
setup_requires =
    black
    isort
[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mkdocs-coverage
    mkdocs-literate-nav
    mkdocs-gen-files
    mkdocs-material-extensions
    mkdocs-awesome-pages-plugin
    mkdocs-autolinks-plugin
    mkdocs-pagenav-generator
tests =
    pytest
    pytest-cookies
coverage =
    coverage
    pre-commit

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203
doctests = True

[isort]
profile = black
py_version = 310
